tests/algorithms/x/C/web_programming/open_google_results.c
// Generated by Mochi 0.10.32 on 2025-08-24 09:44 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


size_t append_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

const char* query_words_init[2] = {"mochi", "language"};
const char* *query_words = query_words_init;
size_t query_words_len = 2;
const char* query = "";
long long i = 0LL;
const char* url = "";
const char* sample_html = "<div><a href=\"https://example.com\">Example</a></div><div><a href=\"https://another.com\">Another</a></div>";
const char* link = "";

long long index_of_substr(const char* s, const char* pat);
const char* first_link(const char* html);
int main(void);

long long index_of_substr(const char* s, const char* pat) {
    if (strlen(pat) == 0LL) {
        return 0LL;
    }
    long long i = 0LL;
    while (i <= (strlen(s) - strlen(pat))) {
        long long j = 0LL;
        while (j < strlen(pat)) {
            if (strcmp((const char[]){s[i + j], 0}, (const char[]){pat[j], 0}) != 0) {
                break;
            }
            j = j + 1LL;
        }
        if (j == strlen(pat)) {
            return i;
        }
        i = i + 1LL;
    }
    return -1LL;
}

const char* first_link(const char* html) {
    long long a_idx = index_of_substr(html, "<a");
    if (a_idx < 0LL) {
        return "";
    }
    const char* href_pat = "href=\"";
    long long href_idx_rel = index_of_substr(_substring(html, a_idx, strlen(html)), href_pat);
    if (href_idx_rel < 0LL) {
        return "";
    }
    long long start = (a_idx + href_idx_rel) + strlen(href_pat);
    long long end = start;
    while (end < strlen(html)) {
        if (strcmp((const char[]){html[end], 0}, "\"") == 0) {
            break;
        }
        end = end + 1LL;
    }
    return _substring(html, start, end);
}

int main(void) {
    {
        long long __start = _now();
        while (i < 2LL) {
            if (i > 0LL) {
                query = str_concat(query, "%20");
            }
            query = str_concat(query, query_words[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? query_words_len + _mochi_idx : _mochi_idx;})]);
            i = i + 1LL;
        }
        url = str_concat(str_concat("https://www.google.com/search?q=", query), "&num=100");
        puts("Googling.....");
        link = first_link(sample_html);
        if (strlen(link) > 0LL) {
            puts(link);
        }
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
